adjusted bio styles

--- a/src/components/Bio/Bio.module.scss
+++ b/src/components/Bio/Bio.module.scss
@@ -6,8 +6,7 @@
   flex-direction: row;
 
   .headshot {
-    width: 250px;
-    height: 250px;
+    width: 30%;
     border-radius: 50%;
     object-fit: cover;
     margin-right: 2rem;
