--- a/src/components/Bio/Bio.module.scss
+++ b/src/components/Bio/Bio.module.scss
@@ -8,9 +8,12 @@
   .headshot {
     width: 30%;
     max-width: 400px;
-    border-radius: 50%;
-    object-fit: cover;
     margin-right: 2rem;
+    img {
+      width: 100%;
+      border-radius: 50%;
+      object-fit: cover;
+    }
   }
 
   .bio {
@@ -18,6 +21,11 @@
     font-size: 1rem;
     line-height: 1.2;
     font-weight: 300;
+    width: 70%;
+
+    a {
+      color: orangered;
+    }
   }
 
   @media (max-width: 900px) {
